# aoc_2024_rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
aoc_grid/: Cargo.toml
aoc_grid/src/: coordinate.rs  direction.rs  grid.rs  grid_index.rs  lib.rs
day01/: Cargo.toml  readme.md
day01/benches/: criterion.rs  divan.rs
day01/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  puzzle_part2.rs
day02/: Cargo.toml  readme.md
day02/benches/: criterion.rs  divan.rs
day02/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  (+1 more)
day03/: Cargo.toml  readme.md
day03/benches/: criterion.rs  divan.rs
day03/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  puzzle_part2.rs
day04/: Cargo.toml  readme.md
day04/benches/: criterion.rs  divan.rs
day04/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  puzzle_part2.rs
day05/: Cargo.toml  readme.md
day06/: Cargo.toml  readme.md
day07/: Cargo.toml  readme.md
day07/benches/: criterion.rs  divan.rs
day07/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  puzzle_part2.rs
day08/: Cargo.toml  readme.md
day09/: Cargo.toml  readme.md
day10/: Cargo.toml  readme.md
day11/: Cargo.toml  readme.md
day11/benches/: criterion.rs  divan.rs
day11/src/: main.rs  puzzle_input.rs  puzzle_part1.rs  puzzle_part2.rs
day12/: Cargo.toml  example_reddit.txt  readme.md
day13/: Cargo.toml  readme.md
day14/: Cargo.toml  images.txt  readme.md
day15/: Cargo.toml  readme.md
day16/: Cargo.toml  readme.md
day17/: Cargo.toml  readme.md
day18/: Cargo.toml  readme.md
day19/: Cargo.toml  readme.md
template/: Cargo.toml
(+90 files in other folders)
