[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
regex = { version = "1.11.1" }

[dev-dependencies]
divan = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
