[package]
name = "day04"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
aoc_grid = { path = "../aoc_grid" }

[dev-dependencies]
divan = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
